# Wyn

./: CMakeLists.txt  README.md
example/: CMakeLists.txt  main.c  main.cpp  test.cpp
example/src/: App.h  app.c  app.h  common.c  common.h  debug.c  debug.h  events.c  events.h  example.c  gfx_gl.c  gmath.h  logic.c  logic.h  main.c  render.h  render_gl.c  test.cpp  update.c  update.h  utils.h
examples/: CMakeLists.txt
examples/example_c/: CMakeLists.txt
examples/example_c/src/: app.h  events.c  main.c
examples/example_cpp/: CMakeLists.txt
examples/example_cpp/src/: app.hpp  events.cpp  main.cpp
include/: wyn.h
src/: wyn.h  wyn_cocoa.c  wyn_cocoa.m  wyn_win32.c  wyn_xlib.c
wyg/: CMakeLists.txt
wyg/include/: wyg.h  wyg_gl.h
wyg/src/: wyg_egl.c  wyg_glx.c  wyg_nsgl.m  wyg_wgl.c
wyg/src/gl/: wyg_egl.c  wyg_glx.c  wyg_nsgl.m  wyg_wgl.c
wyn/: CMakeLists.txt
wyn/include/: wvk.h  wyc.h  wyn.h
wyn/src/: wyn_cocoa.m  wyn_stubs.c  wyn_tasks.c  wyn_win32.c  wyn_x11.c  wyn_xlib.c
wyt/: CMakeLists.txt
wyt/include/: wyt.h
wyt/src/: wyt_pthreads.c  wyt_win32.c
