# @file CMakeLists.txt

# ================================================================================================================================

cmake_minimum_required(VERSION 3.25)
project(Wyn)

# ================================================================================================================================

set(WYN_BUILD_EXAMPLE ON CACHE BOOL "Example Program toggle.")

# ================================================================================================================================

add_subdirectory(wyn)
add_subdirectory(wyt)

if (WYN_BUILD_EXAMPLE)
    add_subdirectory(example)
endif()

# ================================================================================================================================
