# @file examples/CMakeLists.txt

# ================================================================================================================================

if (WYN_EXAMPLE_C)
    add_subdirectory(example_c)
endif()

if (WYN_EXAMPLE_CPP)
    add_subdirectory(example_cpp)
endif()

# ================================================================================================================================
